[package]
name = "substreams-macro"
version = "0.7.0-beta"
edition = "2018"
authors = ["StreamingFast Contributors <team@streamingfast.io>"]
license = "MIT"
description = """
Substream's proc macros.
"""
categories = ["asynchronous"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.7"
quote = "1"
syn = { version = "1.0.95", features = ["full", "visit-mut", "fold"] }
thiserror = "1.0"
