[package]
name = "substreams-macro"
version = "0.0.20"
edition = "2018"
description = "Substream's proc macros."
authors = ["StreamingFast Contributors <team@streamingfast.io>"]
license = "Apache-2.0"
homepage = "https://substreams.streamingfast.io/"
repository = "https://github.com/streamingfast/substreams/rust/substreams-macro"
readme = "../../README.md"
keywords = [ "substreams", "streamingfast", "firehose", "thegraph", "macros"]
categories = ["api-bindings", "external-ffi-bindings", "wasm"]
rust-version = "1.60"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.7"
quote = "1"
syn = { version = "1.0.95", features = ["full", "visit-mut", "fold", "extra-traits"] }
thiserror = "1.0"
