[package]
name = "substreams"
version = "0.7.0-beta"
description = "Substreams base library"
edition = "2018"

[dependencies]
substreams-macro = { version = "0.7.0-beta", path = "../substreams-macro" }
prost = { version = "0.10.1" }
prost-types = "0.10.1"
hex = "0.4.3"
num-bigint = "0.4"
bigdecimal = "0.3"
thiserror = "1.0"

[build-dependencies]
prost-build = "0.10.1"
