[package]
name = "substreams"
version = "0.0.12"
description = "Substreams SDK - A streaming data engine for The Graph - by StreamingFast"
edition = "2018"
homepage = "https://substreams.streamingfast.io/"
repository = "https://github.com/streamingfast/substreams/rust"
license = "Apache-2.0"
readme = "../../README.md"
keywords = [ "substreams", "streamingfast", "firehose", "thegraph"]
categories = ["api-bindings", "external-ffi-bindings", "wasm"]
rust-version = "1.60"

[dependencies]
substreams-macro = { version = "0.0.12", path = "../substreams-macro" }
prost = { version = "0.10.1" }
prost-types = "0.10.1"
hex = "0.4.3"
hex-literal = "0.3.4"
num-bigint = "0.4"
bigdecimal = "0.3"
thiserror = "1.0"

[build-dependencies]
prost-build = "0.10.1"
