[package]
name = "testing-substreams"
version = "0.1.0"
description = "Testing substreams base library"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "substreams"
path = "macros.rs"

[dependencies]
substreams= { path = "../substreams" }
substreams-macro= { path = "../substreams-macro" }
num-bigint = "0.4"
bigdecimal = "0.3"
prost = { version = "0.10.1" }
prost-types = "0.10.1"
hex = "0.4"
wasm-bindgen = "0.2"

[build-dependencies]
prost-build = "0.10.1"
