[package]
name = "testing-substreams"
version = "0.0.16"
description = "Testing substreams base library"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = { path = "../substreams" }
num-bigint = "0.4"
bigdecimal = "0.3"
prost = { version = "0.10.1" }
prost-types = "0.10.1"
hex = "0.4"
hex-literal = "0.3.4"

[build-dependencies]
prost-build = "0.10.1"
