[package]
name = "testing-substreams"
version = "0.0.20"
description = "Testing substreams base library"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = { version = "~0.0.18", path = "../substreams" }
num-bigint = "0.4"
bigdecimal = "0.3"
prost = { version = "^0.11.0" }
prost-types = "^0.11.0"
hex = "0.4"
hex-literal = "0.3.4"

[build-dependencies]
prost-build = "0.10.1"
