[package]
name = "substreams-test"
version = "0.1.0"
description = "Substream test project"
edition = "2021"
repository = "n/a"

[lib]
crate-type = ["cdylib"]

[dependencies]
prost = "^0.11.0"
prost-types = "^0.11.0"

# Use latest from https://crates.io/crates/substreams
substreams = {  path = "../../../rust/substreams" }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
prost-build = "^0.11.0"


[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"