[package]
name = "substreams-test"
version = "0.1.0"
description = "Substream test project"
edition = "2021"
repository = "n/a"

[lib]
crate-type = ["cdylib"]

[dependencies]
prost = "^0.11.0"
prost-types = "^0.11.0"
substreams = { version = "0.5.6" }

[build-dependencies]
anyhow = "1"
prost-build = "^0.11.0"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"